Fixed inactive content overflow

--- a/src/tab.styl
+++ b/src/tab.styl
@@ -1,7 +1,11 @@
 .tab-content > .tab-pane {
-    display: block;
+	display: block;
     opacity: 0;
     height: 0;
+    padding: 0;
+    margin: 0;
+    pointer-events: none;
+    overflow: hidden;
 }
 
 .tab-content > .active {
